Cleaning up grunt

--- a/package.json
+++ b/package.json
@@ -11,33 +11,21 @@
   "devDependencies": {
     "babel": "^5.5.8",
     "babel-core": "^5.5.8",
-    "babel-jest": "^5.3.0",
     "babel-runtime": "^5.5.8",
-    "cjsc": "^1.0.3",
     "core-js": "^0.9.17",
     "grunt": "^0.4.5",
     "grunt-babel": "^5.0.1",
     "grunt-browserify": "^3.8.0",
-    "grunt-cjsc": "^1.0.2",
     "grunt-closure-compiler": "0.0.21",
     "grunt-closure-compiler-build": "^1.0.1",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^14.0.0",
-    "grunt-flow-type-check": "^0.4.3",
     "grunt-jasmine-node": "^0.3.1",
     "grunt-mkdir": "^0.1.2",
     "grunt-react-templates": "^0.1.9",
-    "grunt-traceur-compiler": "0.0.44",
-    "grunt-webpack": "^1.0.8",
-    "jasmine-node": "^1.14.5",
-    "jasmine-standalone": "^1.3.1",
-    "jest-cli": "^0.4.13",
-    "node-libs-browser": "^0.5.2",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "jasmine-node": "^1.14.5"
   },
   "dependencies": {
     "lodash": "^3.9.3",
