--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "grunt-closure-compiler": "0.0.21",
     "grunt-closure-compiler-build": "^1.0.1",
     "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-eslint": "^14.0.0",
